# MJ-benchmark

./: COPYRIGHT  LICENSE  README.md  TRADEMARKS.md  csv_template.csv  template-new.csv  template.csv
mj-benchmark.rs/: Cargo.toml
mj-benchmark.rs/src/: browser_bench.rs  csv_row.rs  google_auth.rs  google_drive.rs  google_sheets.rs  install.rs  main.rs  model.rs  platform.rs  pts.rs  specs_bsd.rs  specs_linux.rs  specs_windows.rs  sync.rs
mj-benchmark.rs/src/TUI/: app.rs  events.rs  mod.rs  state.rs  theme.rs  ui.rs
shell-script/: browser_bench.py  device_specs.sh  device_specs_to_csv.ps1  device_specs_to_csv.sh  install_mj_bench_stack.ps1  install_mj_bench_stack.sh  mj_pipeline.py  run_bench  run_bench.ps1  sync_to_google.py
