[package]
name = "mj-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + OAuth
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = { version = "4", features = ["reqwest", "pkce"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV handling
csv = "1"

# Browser automation (WebDriver)
fantoccini = "0.19"

# Error handling
thiserror = "1"