[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = { version = "4", features = ["reqwest", "pkce"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
fantoccini = "0.19"
thiserror = "1"

# TUI
ratatui = "0.26"
crossterm = "0.27"