[package]
name = "mj-benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed <steelbore>"]
description = "Steelbore MJ-Benchmark: Cross-platform benchmarking orchestrator with TUI/CLI, PTS, browser benchmarks, and Google sync."
license = "GPL3"

[dependencies]
# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- HTTP + OAuth ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = { version = "4", features = ["reqwest", "pkce"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- CSV handling ---
csv = "1"

# --- Browser automation (WebDriver) ---
fantoccini = "0.19"

# --- Error handling ---
thiserror = "1"

# --- TUI (Steelbore UI) ---
ratatui = "0.26"
crossterm = "0.27"

# --- System interaction (optional but useful) ---
which = "6"

# --- Logging (optional, used internally if needed) ---
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true